OBG-267. Clarify that sandbox is xs2a-sandbox

--- a/how-to-start-with-project/technical-ui/docker-compose.yml
+++ b/how-to-start-with-project/technical-ui/docker-compose.yml
@@ -75,7 +75,7 @@ services:
 
 #
 #
-#          ========================= SANDBOX ==================================
+#          ========================= XS2A-SANDBOX ==================================
 #
 #
   xs2a-sandbox-postgres:
