OBG-260 first draft of mapping

--- a/opba-facade-protocol-api-shared/pom.xml
+++ b/opba-facade-protocol-api-shared/pom.xml
@@ -26,5 +26,10 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>opba-banking-rest-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
