--- a/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_ais.yml
+++ b/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_ais.yml
@@ -31,6 +31,7 @@ paths:
         #header
         #common header parameter
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Authorization"
+        - $ref: "./tpp_banking_api_commons.yml#/components/parameters/ServiceSessionPassword"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Bank-ID"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Fintech-User-ID"
         - $ref: "#/components/parameters/Fintech-Redirect-URL-OK"
@@ -64,6 +65,7 @@ paths:
         #header
         #common header parameter
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Authorization"
+        - $ref: "./tpp_banking_api_commons.yml#/components/parameters/ServiceSessionPassword"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Bank-ID"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Fintech-User-ID"
         - $ref: "#/components/parameters/Fintech-Redirect-URL-OK"
