--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ jdk:
 script:
   # tests are not done with mvn test - dont know why
   - ./scripts/build_mvn.sh
+  - docker run -it --rm -v "$PWD":/opt/app-root/src -w /opt/app-root/src -u "$(id -u "${USER}"):$(id -g "${USER}")" trion/ng-cli-karma make fintech-ui-test
   - docker run -it --rm -v "$PWD":/opt/app-root/src -w /opt/app-root/src -u "$(id -u "${USER}"):$(id -g "${USER}")" trion/ng-cli make fintech-ui
 
 after_success:
