OPB-241 customizable threshold values

--- a/opba-embedded-starter/src/main/resources/application.yml
+++ b/opba-embedded-starter/src/main/resources/application.yml
@@ -26,6 +26,11 @@ spring:
 bank-search:
   start: 0
   max: 10
+  keyword:
+    threshold:
+      name: 0.6
+      bic: 0.8
+      bank_code: 0.8
 
 protocol:
   redirect:
