--- a/opba-banking-rest-impl/src/test/resources/application.yml
+++ b/opba-banking-rest-impl/src/test/resources/application.yml
@@ -30,7 +30,7 @@ bank-search:
          UNION
           SELECT id, uuid, name, bic, bank_code, word_similarity(:keyword, bank_code) as sml
            FROM opb_bank WHERE word_similarity(:keyword, bank_code) >= 0.8
-         ORDER BY sml DESC
+         ORDER BY sml DESC, id
          LIMIT :max
          OFFSET :start"
 facade:
