--- a/opba-protocols/xs2a-protocol/src/test/resources/application-test-one-time-postgres-ramfs.yml
+++ b/opba-protocols/xs2a-protocol/src/test/resources/application-test-one-time-postgres-ramfs.yml
@@ -4,3 +4,5 @@ spring:
     username: postgres
     password: docker
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
+bank-search:
+  query:
