--- a/opba-banking-protocol-facade/src/test/resources/application-no-encryption.yml
+++ b/opba-banking-protocol-facade/src/test/resources/application-no-encryption.yml
@@ -4,3 +4,5 @@ spring:
     username: postgres
     password: docker
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
+bank-search:
+  query:
