--- a/opba-protocols/xs2a-protocol/pom.xml
+++ b/opba-protocols/xs2a-protocol/pom.xml
@@ -243,6 +243,23 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>com.google.code.maven-replacer-plugin</groupId>
+                <artifactId>replacer</artifactId>
+                <version>1.5.3</version>
+                <executions>
+                    <execution>
+                        <phase>process-sources</phase>
+                        <goals>
+                            <goal>replace</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <filesToInclude>**/resources/templates/*.xml</filesToInclude>
+                    <tokenValueMap>${project.basedir}/src/main/resources/context.properties</tokenValueMap>
+                </configuration>
+            </plugin>
+            <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>${maven.dependency.plugin.version}</version>
                 <executions>
