OBG-296. Sandbox-related transformations applied

--- a/opba-protocols/xs2a-protocol/pom.xml
+++ b/opba-protocols/xs2a-protocol/pom.xml
@@ -235,28 +235,12 @@
                 </executions>
                 <configuration>
                     <includes>
+                        <include>processes/xs2a/**/*.xml</include>
                         <include>*.yml</include>
                         <include>*.sql</include>
                         <include>*.properties</include>
                         <include>*.keystore</include>
                     </includes>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>com.google.code.maven-replacer-plugin</groupId>
-                <artifactId>replacer</artifactId>
-                <version>1.5.3</version>
-                <executions>
-                    <execution>
-                        <phase>process-sources</phase>
-                        <goals>
-                            <goal>replace</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <filesToInclude>**/resources/templates/*.xml</filesToInclude>
-                    <tokenValueMap>${project.basedir}/src/main/resources/context.properties</tokenValueMap>
                 </configuration>
             </plugin>
             <plugin>
