--- a/opba-embedded-starter/pom.xml
+++ b/opba-embedded-starter/pom.xml
@@ -49,9 +49,16 @@
             <artifactId>opba-banking-protocol-facade</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <!-- Protocols -->
         <dependency>
             <groupId>de.adorsys.opba</groupId>
             <artifactId>xs2a-protocol</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>xs2a-sandbox-protocol</artifactId>
             <version>${project.version}</version>
         </dependency>
 
