OBG-253. Dropped some unused code and dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,8 @@
         <h2.database.version>1.4.200</h2.database.version>
         <spring-web.version>5.2.3.RELEASE</spring-web.version>
         <feign-http-client.version>10.7.4</feign-http-client.version>
+        <!-- JavaDoc -->
+        <javax.interceptor.api.version>1.2.2</javax.interceptor.api.version>
     </properties>
 
     <repositories>
