--- a/opba-protocols/xs2a-protocol/pom.xml
+++ b/opba-protocols/xs2a-protocol/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>javax.interceptor</groupId>
             <artifactId>javax.interceptor-api</artifactId>
-            <version>1.2.2</version>
+            <version>${javax.interceptor.api.version}</version>
         </dependency>
         <!-- end javadoc -->
 
@@ -50,14 +50,6 @@
         </dependency>
 
         <!-- Spring -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -96,11 +88,6 @@
             <artifactId>flowable-spring-boot-starter-process</artifactId>
             <version>${flowable.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.flowable</groupId>
-            <artifactId>flowable-spring-boot-starter-actuator</artifactId>
-            <version>${flowable.version}</version>
-        </dependency>
 
         <!-- XS2A Adapter BEGIN -->
         <!-- Adapter BOM -->
@@ -135,12 +122,6 @@
             <version>${xs2a-adapter.version}</version>
         </dependency>
         <!-- XS2A Adapter END -->
-
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
-            <version>${springdoc-openapi-ui.version}</version>
-        </dependency>
 
         <!-- Mappers/Validators -->
         <dependency>
