--- a/how-to-start-with-project/technical-ui/docker-compose.yml
+++ b/how-to-start-with-project/technical-ui/docker-compose.yml
@@ -47,10 +47,12 @@ services:
       - GATEWAY_BASE_URL=http://opba-banking-gateway:8085
       - EMBEDDED_UI_BASE_URL=http://localhost:5500
       - SPRING_LIQUIBASE_PARAMETERS_ADORSYS_SANDBOX_URL=http://x2sa-sandbox-ledgersgateway:8089
+      - FACADE_ENCRYPTION_KEYSETPATH=/keysetpath/example-keyset.json
     ports:
       - 18085:8085
     volumes:
       - ../../opba-protocols/xs2a-protocol/src/main/resources/:/pkcs12/
+      - ../../opba-banking-protocol-facade/src/main/resources/:/keysetpath/
     depends_on:
       - opba-postgres
     networks:
