OBG-253. Initial test cleanup

--- a/opba-protocols/xs2a-protocol-tests/xs2a-bdd-tests-common/pom.xml
+++ b/opba-protocols/xs2a-protocol-tests/xs2a-bdd-tests-common/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>xs2a-protocol</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>xs2a-sandbox-protocol</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
