--- a/opba-protocols/xs2a-protocol-tests/xs2a-bdd-tests-common/pom.xml
+++ b/opba-protocols/xs2a-protocol-tests/xs2a-bdd-tests-common/pom.xml
@@ -21,6 +21,23 @@
     <dependencies>
         <dependency>
             <groupId>de.adorsys.opba</groupId>
+            <artifactId>opba-banking-rest-impl</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>opba-consent-rest-impl</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>opba-banking-protocol-facade</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <!-- Protocols -->
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
             <artifactId>xs2a-protocol</artifactId>
             <version>${project.version}</version>
         </dependency>
