--- a/opba-protocols/xs2a-protocol-tests/xs2a-bdd-tests-common/pom.xml
+++ b/opba-protocols/xs2a-protocol-tests/xs2a-bdd-tests-common/pom.xml
@@ -20,6 +20,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>de.adorsys.opba</groupId>
             <artifactId>opba-banking-rest-impl</artifactId>
             <version>${project.version}</version>
