OBG-253. Fixed dependency issues

--- a/opba-banking-protocol-facade/pom.xml
+++ b/opba-banking-protocol-facade/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>tink</artifactId>
             <version>${tink.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>${bouncycastle.version}</version>
+        </dependency>
 
         <!-- Test dependencies -->
         <dependency>
