OBG-253. Fixed encryption config

--- a/opba-protocols/xs2a-protocol-tests/xs2a-bdd-tests-common/pom.xml
+++ b/opba-protocols/xs2a-protocol-tests/xs2a-bdd-tests-common/pom.xml
@@ -118,6 +118,7 @@
                         <include>restrecord/**/*.*</include>
                         <include>**/*.yml</include>
                         <include>**/*.sql</include>
+                        <include>**/*.json</include>
                     </includes>
                 </configuration>
             </plugin>
