OBG-253. Added keystore

--- a/opba-protocols/xs2a-protocol-tests/xs2a-bdd-tests-common/pom.xml
+++ b/opba-protocols/xs2a-protocol-tests/xs2a-bdd-tests-common/pom.xml
@@ -119,6 +119,7 @@
                         <include>**/*.yml</include>
                         <include>**/*.sql</include>
                         <include>**/*.json</include>
+                        <include>sample-qwac.keystore</include>
                     </includes>
                 </configuration>
             </plugin>
