--- a/opba-embedded-starter/Dockerfile
+++ b/opba-embedded-starter/Dockerfile
@@ -3,8 +3,8 @@ FROM openjdk:8-jre-alpine
 ENV APP_HOME /usr/app
 WORKDIR $APP_HOME
 
-COPY target/*.jar .
+COPY target/*exec.jar .
 
 EXPOSE 8085
 
-ENTRYPOINT ["sh", "-c", "java -jar open-banking-gateway-*.jar"]
+ENTRYPOINT ["sh", "-c", "java -jar open-banking-gateway-*exec.jar"]
