--- a/opba-embedded-starter/pom.xml
+++ b/opba-embedded-starter/pom.xml
@@ -112,6 +112,7 @@
                     <mainClass>de.adorsys.opba.starter.OpenBankingEmbeddedApplication</mainClass>
                     <executable>true</executable>
                     <skip>false</skip>
+                    <classifier>exec</classifier>
                 </configuration>
                 <executions>
                     <execution>
