--- a/last-module-codecoverage/pom.xml
+++ b/last-module-codecoverage/pom.xml
@@ -64,6 +64,12 @@
         </dependency>
         <dependency>
             <groupId>de.adorsys.opba</groupId>
+            <artifactId>opba-embedded-starter-tests</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
             <artifactId>opba-facade-protocol-api-shared</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -73,6 +79,11 @@
         <dependency>
             <groupId>de.adorsys.opba</groupId>
             <artifactId>xs2a-protocol</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>xs2a-sandbox-protocol</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
