OBG 325 make compilable

--- a/fintech-examples/fintech-server/src/main/resources/application.yml
+++ b/fintech-examples/fintech-server/src/main/resources/application.yml
@@ -8,6 +8,11 @@ server:
       path: /
       sameSite: none
       # sameSite: Strict|Lax|none
+
+fintech:
+  ui:
+    # origin: http://localhost:4444 if not set, * is used
+
 tpp:
   url: http://localhost:8085
 
