--- a/fintech-examples/fintech-api/src/main/resources/static/fintech_api.yml
+++ b/fintech-examples/fintech-api/src/main/resources/static/fintech_api.yml
@@ -173,8 +173,8 @@ paths:
       responses:
         '200':
           $ref: "#/components/responses/200_AccountList"
-        '302':
-          $ref: '#/components/responses/302_Found'
+        '202':
+          $ref: '#/components/responses/202_Accepted'
         '401':
           $ref: '#/components/responses/401_Unauthorized'
         '404':
@@ -208,8 +208,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/200_AccountsTransactions'
-        '302':
-          $ref: '#/components/responses/302_Found'
+        '202':
+          $ref: '#/components/responses/202_Accepted'
         '401':
           $ref: '#/components/responses/401_Unauthorized'
         '404':
@@ -608,8 +608,8 @@ components:
           schema:
             $ref: '#/components/schemas/transactionsResponse'
 
-    302_Found:
-      description: Redirects UserAgent to the ConsentAuthorisationApi.
+    202_Accepted:
+      description: Redirects UserAgent to the ConsentAuthorisationApi. The original 302 caused problems in UI, so 202 is used.
       headers:
         Location:
           $ref: '#/components/headers/Location-Consent-Auth'
