--- a/opba-protocols/xs2a-protocol-tests/xs2a-stress-test/pom.xml
+++ b/opba-protocols/xs2a-protocol-tests/xs2a-stress-test/pom.xml
@@ -46,11 +46,6 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.tomakehurst</groupId>
-            <artifactId>wiremock</artifactId>
-            <version>${wiremock.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>postgresql</artifactId>
             <version>${testcontainers.version}</version>
@@ -60,13 +55,13 @@
         <dependency>
             <groupId>org.jsmart</groupId>
             <artifactId>zerocode-tdd</artifactId>
-            <version>1.3.17</version>
+            <version>${zerocode.tdd.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jsmart</groupId>
             <artifactId>zerocode-tdd-jupiter</artifactId>
-            <version>1.3.17</version>
+            <version>${zerocode.tdd.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -80,6 +75,7 @@
                 <version>${maven-remote-resources-plugin.version}</version>
                 <configuration>
                     <resourceBundles>
+                        <resourceBundle>de.adorsys.opba:xs2a-bdd-tests-common:${project.version}</resourceBundle>
                         <resourceBundle>de.adorsys.opba:xs2a-bdd-wiremock:${project.version}</resourceBundle>
                     </resourceBundles>
                 </configuration>
