--- a/fintech-examples/fintech-impl/pom.xml
+++ b/fintech-examples/fintech-impl/pom.xml
@@ -31,7 +31,11 @@
             <artifactId>mapstruct</artifactId>
             <version>${mapstruct.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>opba-banking-rest-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>de.adorsys.opba</groupId>
             <artifactId>fintech-api</artifactId>
@@ -119,8 +123,6 @@
             <scope>runtime</scope>
             -->
         </dependency>
-
-
     </dependencies>
 
     <build>
