--- a/opba-protocols/xs2a-protocol-tests/xs2a-bdd-tests-common/pom.xml
+++ b/opba-protocols/xs2a-protocol-tests/xs2a-bdd-tests-common/pom.xml
@@ -117,6 +117,7 @@
                     <includes>
                         <include>restrecord/**/*.*</include>
                         <include>**/*.yml</include>
+                        <include>**/*.properties</include>
                         <include>**/*.sql</include>
                         <include>**/*.json</include>
                         <include>sample-qwac.keystore</include>
