--- a/fintech-examples/fintech-server/src/main/resources/application.yml
+++ b/fintech-examples/fintech-server/src/main/resources/application.yml
@@ -14,8 +14,8 @@ tpp:
 
 mock:
   tppais:
-    listtransactions: false
-    listaccounts: false
+    listtransactions: true
+    listaccounts: true
 
 spring:
   datasource:
