correct gloabal config

--- a/fintech-examples/fintech-server/src/main/resources/application.yml
+++ b/fintech-examples/fintech-server/src/main/resources/application.yml
@@ -14,8 +14,8 @@ tpp:
 
 mock:
   tppais:
-    listtransactions: true
-    listaccounts: true
+    listtransactions: false
+    listaccounts: false
 
 spring:
   datasource:
