--- a/fintech-examples/fintech-impl/src/test/resources/application.yml
+++ b/fintech-examples/fintech-impl/src/test/resources/application.yml
@@ -19,6 +19,9 @@ mock:
     listtransactions: true
     listaccounts: true
 
-
-
+fintech-ui:
+  # It means URLs have format "http://some-address/more?parameter="
+  ok-url: http://localhost:5500/fintech-callback/redirect?fintechRedirectUriOk=
+  nok-url: http://localhost:5500/fintech-callback/redirect?fintechRedirectUriNOk=
+  exception-url: http://localhost:5500/fintech-callback/excaption-redirect?exception
 
