--- a/fintech-examples/fintech-server/src/main/resources/application.yml
+++ b/fintech-examples/fintech-server/src/main/resources/application.yml
@@ -24,3 +24,9 @@ spring:
     password:
     driver-class-name: org.h2.Driver
 
+fintech-ui:
+  # It means URLs have format "http://some-address/more?parameter="
+  ok-url: http://localhost:5500/fintech-callback/redirect?fintechRedirectUriOk=
+  nok-url: http://localhost:5500/fintech-callback/redirect?fintechRedirectUriNOk=
+  exception-url: http://localhost:5500/fintech-callback/excaption-redirect?exception
+
