--- a/consent-ui/angular.json
+++ b/consent-ui/angular.json
@@ -67,7 +67,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "consent-ui:build"
+            "browserTarget": "consent-ui:build",
+            "proxyConfig": "proxy-conf.json"
           },
           "configurations": {
             "production": {
