--- a/fintech-examples/fintech-impl/pom.xml
+++ b/fintech-examples/fintech-impl/pom.xml
@@ -16,9 +16,15 @@
         <tpp-bank-search-location>
             ${main.basedir}/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_bank_search.yml
         </tpp-bank-search-location>
+        <tpp-bank-search-prefix>de.adorsys.opba.tpp.banksearch</tpp-bank-search-prefix>
         <tpp-ais-location>
             ${main.basedir}/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_ais.yml
         </tpp-ais-location>
+        <tpp-ais-prefix>de.adorsys.opba.tpp.ais</tpp-ais-prefix>
+        <tpp-token-location>
+            ${main.basedir}/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_token.yml
+        </tpp-token-location>
+        <tpp-token-prefix>de.adorsys.opba.tpp.token</tpp-token-prefix>
     </properties>
 
 
@@ -30,11 +36,6 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>${mapstruct.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>de.adorsys.opba</groupId>
-            <artifactId>opba-banking-rest-api</artifactId>
-            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>de.adorsys.opba</groupId>
@@ -145,11 +146,11 @@
                             <generateModelTests>false</generateModelTests>
                             <configOptions>
                                 <sourceFolder>src/main/java</sourceFolder>
-                                <basePackage>de.adorsys.opba.tpp.banksearch.api.generated</basePackage>
-                                <configPackage>de.adorsys.opba.tpp.banksearch.api.config.generated</configPackage>
-                                <modelPackage>de.adorsys.opba.tpp.banksearch.api.model.generated</modelPackage>
-                                <apiPackage>de.adorsys.opba.tpp.banksearch.api.resource.generated</apiPackage>
-                                <invokerPackage>de.adorsys.opba.tpp.banksearch.client.generated</invokerPackage>
+                                <basePackage>${tpp-bank-search-prefix}.api.generated</basePackage>
+                                <configPackage>${tpp-bank-search-prefix}.api.config.generated</configPackage>
+                                <modelPackage>${tpp-bank-search-prefix}.api.model.generated</modelPackage>
+                                <apiPackage>${tpp-bank-search-prefix}.api.resource.generated</apiPackage>
+                                <invokerPackage>${tpp-bank-search-prefix}.client.generated</invokerPackage>
                                 <interfaceOnly>true</interfaceOnly>
                                 <skipOverwrite>true</skipOverwrite>
                                 <dateLibrary>java8</dateLibrary>
@@ -176,11 +177,42 @@
                             <generateModelTests>false</generateModelTests>
                             <configOptions>
                                 <sourceFolder>src/main/java</sourceFolder>
-                                <basePackage>de.adorsys.opba.tpp.ais.api.generated</basePackage>
-                                <configPackage>de.adorsys.opba.tpp.ais.api.config.generated</configPackage>
-                                <modelPackage>de.adorsys.opba.tpp.ais.api.model.generated</modelPackage>
-                                <apiPackage>de.adorsys.opba.tpp.ais.api.resource.generated</apiPackage>
-                                <invokerPackage>de.adorsys.opba.tpp.ais.client.generated</invokerPackage>
+                                <basePackage>${tpp-ais-prefix}.api.generated</basePackage>
+                                <configPackage>${tpp-ais-prefix}.api.config.generated</configPackage>
+                                <modelPackage>${tpp-ais-prefix}.api.model.generated</modelPackage>
+                                <apiPackage>${tpp-ais-prefix}.api.resource.generated</apiPackage>
+                                <invokerPackage>${tpp-ais-prefix}.client.generated</invokerPackage>
+                                <interfaceOnly>true</interfaceOnly>
+                                <skipOverwrite>true</skipOverwrite>
+                                <dateLibrary>java8</dateLibrary>
+                                <java8>false</java8>
+                                <useTags>true</useTags>
+                                <defaultInterfaces>false</defaultInterfaces>
+                                <implicitHeaders>false</implicitHeaders>
+                                <generateForOpenFeign>true</generateForOpenFeign>
+                                <library>spring-cloud</library>
+                                <swaggerDocketConfig>false</swaggerDocketConfig>
+                            </configOptions>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>token</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>${tpp-token-location}</inputSpec>
+                            <language>spring</language>
+                            <output>${project.build.directory}/generated-sources/open-api/</output>
+                            <generateApiTests>false</generateApiTests>
+                            <generateModelTests>false</generateModelTests>
+                            <configOptions>
+                                <sourceFolder>src/main/java</sourceFolder>
+                                <basePackage>${tpp-token-prefix}.api.generated</basePackage>
+                                <configPackage>${tpp-token-prefix}.api.config.generated</configPackage>
+                                <modelPackage>${tpp-token-prefix}.api.model.generated</modelPackage>
+                                <apiPackage>${tpp-token-prefix}.api.resource.generated</apiPackage>
+                                <invokerPackage>${tpp-token-prefix}.client.generated</invokerPackage>
                                 <interfaceOnly>true</interfaceOnly>
                                 <skipOverwrite>true</skipOverwrite>
                                 <dateLibrary>java8</dateLibrary>
