--- a/fintech-examples/fintech-server/src/test/resources/application.yml
+++ b/fintech-examples/fintech-server/src/test/resources/application.yml
@@ -11,7 +11,6 @@ spring:
     driver-class-name: org.h2.Driver
 
 fintech-ui:
-  # It means URLs have format "http://some-address/more?parameter="
-  ok-url: http://localhost:5500/fintech-callback/redirect?fintechRedirectUriOk=
-  nok-url: http://localhost:5500/fintech-callback/redirect?fintechRedirectUriNOk=
+  ok-url: http://localhost:5500/fintech-callback/redirect?fintechRedirectUriOk={redirectCode}
+  not-ok-url: http://localhost:5500/fintech-callback/redirect?fintechRedirectUriNOk={redirectCode}
   exception-url: http://localhost:5500/fintech-callback/excaption-redirect?exception
