--- a/consent-ui/package.json
+++ b/consent-ui/package.json
@@ -24,6 +24,7 @@
     "material-design-icons": "^3.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "uuidv4": "^6.0.6",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
