OBG-370. Sandbox support for ASPSP global consent

--- a/opba-protocols/sandboxes/xs2a-sandbox/src/main/resources/sandbox/application-test-aspsp-profile.yml
+++ b/opba-protocols/sandboxes/xs2a-sandbox/src/main/resources/sandbox/application-test-aspsp-profile.yml
@@ -19,8 +19,8 @@ bank_profile:
 setting:
   ais:
     consentTypes:
-      bankOfferedConsentSupported: FALSE
-      globalConsentSupported: FALSE
+      bankOfferedConsentSupported: TRUE
+      globalConsentSupported: TRUE
       availableAccountsConsentSupported: TRUE
       accountAccessFrequencyPerDay: 4
       notConfirmedConsentExpirationTimeMs: 86400000
