--- a/fintech-examples/fintech-server/pom.xml
+++ b/fintech-examples/fintech-server/pom.xml
@@ -84,6 +84,11 @@
             <scope>runtime</scope>
             -->
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
+        </dependency>
 
     </dependencies>
 
