--- a/fintech-examples/fintech-server/src/main/resources/application.yml
+++ b/fintech-examples/fintech-server/src/main/resources/application.yml
@@ -14,8 +14,8 @@ tpp:
 
 mock:
   tppais:
-    listtransactions: true
-    listaccounts: true
+    listtransactions: false
+    listaccounts: false
 
 spring:
   datasource:
@@ -25,6 +25,6 @@ spring:
     driver-class-name: org.h2.Driver
 
 fintech-ui:
-  redirect-url: http://localhost:4444/{redirectUri}/{redirectCode}
+  redirect-url: http://localhost:4444{redirectUri}/{redirectCode}
   exception-url: http://localhost:4444/excaption-redirect
 
