--- a/opba-consent-rest-api/src/main/resources/static/tpp_consent_api.yml
+++ b/opba-consent-rest-api/src/main/resources/static/tpp_consent_api.yml
@@ -98,7 +98,8 @@ paths:
         authorization process.
       description: |
         Update consent session with PSU auth data whereby requesting remaining
-        challenges for the ongoing authorization process. 
+        challenges for the ongoing authorization process.
+        Returns 202 if one should proceed to some other link. Link to follow is in 'Location' header.
       parameters:
         #path
         - $ref: '#/components/parameters/auth-id'
@@ -115,6 +116,8 @@ paths:
               
       responses:
         '200':
+          $ref: '#/components/responses/200_AuthorizeResponse'
+        '202':
           $ref: '#/components/responses/200_AuthorizeResponse'
         '401':
           $ref: '#/components/responses/401_Unauthorized'
