--- a/opba-protocols/xs2a-protocol/src/main/resources/application.yml
+++ b/opba-protocols/xs2a-protocol/src/main/resources/application.yml
@@ -26,6 +26,7 @@ spring:
 
 protocol:
   redirect:
+    to-aspsp: ${protocol.embedded-ui-base-url}/ais/#{context.getAuthorizationSessionIdIfOpened()}/to-aspsp-redirection
     consent-accounts:
       ok:  ${protocol.gateway-base-url}/v1/consent/#{context.getAuthorizationSessionIdIfOpened()}/fromAspsp/STUB_STATE/ok?redirectCode=#{context.getAspspRedirectCode()}
       nok: ${protocol.gateway-base-url}/v1/consent/#{context.getAuthorizationSessionIdIfOpened()}/fromAspsp/STUB_STATE/nok?redirectCode=#{context.getAspspRedirectCode()}
