--- a/opba-embedded-starter/src/main/resources/application-technical-ui.yml
+++ b/opba-embedded-starter/src/main/resources/application-technical-ui.yml
@@ -1,7 +1,8 @@
 protocol:
   redirect:
     to-aspsp: "#{context.getLastRedirection().getRedirectTo()}"
+    consent-accounts:
+      result: ${protocol.embedded-ui-base-url}/from-aspsp?dest=#{urlSafe(context.getLastRedirection().getRedirectTo())}&serviceSessionId=#{context.getServiceSessionId()}
     parameters:
       provide-more: ${protocol.embedded-ui-base-url}/parameters/provide-more/#{execution.getId()}?q=#{urlSafe(context.getViolations().toString())}
-  gateway-base-url: ${protocol.embedded-ui-base-url}/from-aspsp
   embedded-ui-base-url: http://localhost:5500
