OBG-387 deploy consent-ui configuration

--- a/consent-ui/package.json
+++ b/consent-ui/package.json
@@ -5,6 +5,9 @@
     "ng": "ng",
     "openapi-gen": "openapi-generator generate -g typescript-angular -o src/app/api -i ../opba-consent-rest-api/src/main/resources/static/tpp_consent_api.yml",
     "start": "ng serve",
+    "serve": "ng serve --proxy-config=proxy.conf.json",
+    "serve:dev": "ng serve --proxy-config=proxy-dev.conf.json",
+    "serve:docker": "ng serve --proxy-config=proxy-docker.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
