--- a/consent-ui/package.json
+++ b/consent-ui/package.json
@@ -9,6 +9,7 @@
     "serve:dev": "ng serve --proxy-config=proxy-dev.conf.json",
     "serve:docker": "ng serve --proxy-config=proxy-docker.conf.json",
     "build": "ng build",
+    "build:prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
