fix typo in consent-ui/nginx.conf

--- a/consent-ui/nginx.conf
+++ b/consent-ui/nginx.conf
@@ -32,7 +32,7 @@ http {
       listen 4200;
       root /app/dist;
       add_header 'Access-Control-Allow-Origin' '*';
-      add_header 'Access-Control-Expose-Headers': '*';
+      add_header 'Access-Control-Expose-Headers' '*';
 
       location /embedded-server/ {
         proxy_pass $BACKEND_URL/;
