Fix wrong host value

--- a/consent-ui/nginx.conf
+++ b/consent-ui/nginx.conf
@@ -36,7 +36,7 @@ http {
 
       location /embedded-server/ {
         proxy_pass $BACKEND_URL/;
-        proxy_set_header Host *;
+        proxy_set_header Host $HOST;
       }
 
       location / {
