Remove useless errors

--- a/consent-ui/nginx.conf
+++ b/consent-ui/nginx.conf
@@ -43,8 +43,7 @@ http {
       }
 
       location / {
-        proxy_intercept_errors on;
-        error_page 404 = /index.html;
+        try_files ${DOLLAR}uri ${DOLLAR}uri/ /index.html;
        }
     }
 }
