Helper profiles to use local/remote servers

--- a/technical-embedded-ui/tpp-ui/angular.json
+++ b/technical-embedded-ui/tpp-ui/angular.json
@@ -65,8 +65,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "tpp-ui:build",
-            "proxyConfig": "proxy-conf.js"
+            "browserTarget": "tpp-ui:build"
           },
           "configurations": {
             "production": {
