--- a/consent-ui/angular.json
+++ b/consent-ui/angular.json
@@ -67,8 +67,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "consent-ui:build",
-            "proxyConfig": "proxy-conf.json"
+            "browserTarget": "consent-ui:build"
           },
           "configurations": {
             "production": {
