--- a/consent-ui/package.json
+++ b/consent-ui/package.json
@@ -5,7 +5,8 @@
     "ng": "ng",
     "openapi-gen": "openapi-generator generate -g typescript-angular -o src/app/api -i ../opba-consent-rest-api/src/main/resources/static/tpp_consent_api.yml",
     "start": "ng serve",
-    "serve": "ng serve --proxy-config=proxy.conf.json",
+    "serve:local": "ng serve --proxy-config=proxy-conf-local-backend.json",
+    "serve:dev": "ng serve --proxy-config=proxy-conf-dev-backend.json",
     "build": "ng build",
     "build:prod": "ng build --prod",
     "test": "ng test",
