Helper profiles to use all remote servers

--- a/technical-embedded-ui/tpp-ui/package.json
+++ b/technical-embedded-ui/tpp-ui/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve --port 5500",
     "serve:local": "ng serve --port 5500 --proxy-config=proxy-conf-local.js",
     "serve:dev-backend-local-consent-ui": "ng serve --port 5500 --proxy-config=proxy-conf-dev-backend-local-consent-ui.js",
+    "serve:dev-backend-dev-consent-ui": "ng serve --port 5500 --proxy-config=proxy-conf-dev-backend-dev-consent-ui.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
